--- a/apps/client-portal/src/app/main/layout/components/app-top-bar/app-top-bar.component.html
+++ b/apps/client-portal/src/app/main/layout/components/app-top-bar/app-top-bar.component.html
@@ -1,130 +1,61 @@
 <p-toast></p-toast>
-
-<!-- <div *ngIf="isRouteVisited">
-  <div style="background-color: #F0F3F9 !important;" class="layout-topbar px-2 md:px-4 lg:px-6">
-  <div class="px-2 md:px-4 lg:px-6">
-    <a class="layout-topbar-logo" routerLink=""> </a>
-  </div>
-  <button *ngIf="layoutService.state.staticMenuDesktopInactive == true"
-    #menubutton
-    class="p-link layout-menu-button layout-topbar-button"
-    (click)="layoutService.onMenuToggle()"
-  >
-    <i class="pi pi-bars"></i>
-  </button>
-
-  <button #topbarmenubutton class="p-link layout-topbar-menu-button layout-topbar-button"
-    (click)="layoutService.showProfileSidebar()">
-    <i class="pi pi-ellipsis-v"></i>
-  </button>
-
-  <div #topbarmenu class="layout-topbar-menu" [ngClass]="{
-      'layout-topbar-menu-mobile-active':
-        layoutService.state.profileSidebarVisible
-    }">
-    <p-avatar icon="pi pi-search" severity="success" styleClass="mr-2 p-link p-3 shadow-1"
-      [style]="{ 'background-color': '#ffffff', color: '#4A5468' }"></p-avatar>
-    <p-avatar (click)="op.toggle($event)" icon="pi pi-bell" severity="success" styleClass="mr-2 p-link p-3 shadow-1"
-      [style]="{ 'background-color': '#ffffff', color: '#4A5468' }"></p-avatar>
-    <p-overlayPanel #op [showCloseIcon]="false" [style]="{ width: '450px' }" styleClass="shadow-5 mt-5">
-      <ng-template pTemplate>
-        <p-table [value]="notificationItems" selectionMode="single" [(selection)]="selectedNotification"
-          (onNotificationSelect)="onNotificationSelect($event)" [rows]="10" responsiveLayout="scroll">
-          <ng-template pTemplate="header">
-            <tr>
-              <th><strong>NOTIFICATIONS</strong></th>
-            </tr>
-          </ng-template>
-          <ng-template pTemplate="body" let-rowData let-notificationItem>
-            <tr routerLink="{{ notificationItem.routerLink }}" [pSelectableRow]="rowData">
-              <td>
-                <p class="grey-font mb-0 pb-0">
-                  <small><strong>{{ notificationItem.label }}</strong></small>
-                </p>
-                <p class="text-500 mt-0 pt-0">
-                  <small>{{ notificationItem.label }}</small>
-                </p>
-              </td>
-            </tr>
-          </ng-template>
-        </p-table>
-        <button pButton pRipple label="Clear all notifications"
-          class="w-full p-button-raised p-button-secondary"></button>
-      </ng-template>
-    </p-overlayPanel>
-    <p-menu #NotificationMenu [popup]="true" [model]="notificationItems"></p-menu>
-    <ng-container *ngIf="user | async as nUser">
-      <p-chip [label]="nUser.full_name" image="assets/images/logos/myProfilePic.png" styleClass="mr-2">
-      </p-chip>
-    </ng-container>
-
-    <button class="p-link" (click)="menu.toggle($event)">
-      <i class="pi pi-chevron-down"></i></button><p-menu styleClass="p-2" #menu [popup]="true" [model]="items"></p-menu>
-  </div>
-</div>
-</div> -->
 <div>
   <div class="layout-topbar px-2 md:px-4 lg:px-6">
-  <div class="px-2 md:px-4 lg:px-6">
-    <a class="layout-topbar-logo" routerLink=""> </a>
-  </div>
-  <button *ngIf="layoutService.state.staticMenuDesktopInactive == true"
-    #menubutton
-    class="p-link layout-menu-button layout-topbar-button"
-    (click)="layoutService.onMenuToggle()"
-  >
-    <i class="pi pi-bars"></i>
-  </button>
+    <div class="px-2 md:px-4 lg:px-6">
+      <a class="layout-topbar-logo" routerLink=""> </a>
+    </div>
+    <button *ngIf="layoutService.state.staticMenuDesktopInactive == true" #menubutton
+      class="p-link layout-menu-button layout-topbar-button" (click)="layoutService.onMenuToggle()">
+      <i class="pi pi-bars"></i>
+    </button>
 
-  <button #topbarmenubutton class="p-link layout-topbar-menu-button layout-topbar-button"
-    (click)="layoutService.showProfileSidebar()">
-    <i class="pi pi-ellipsis-v"></i>
-  </button>
+    <button #topbarmenubutton class="p-link layout-topbar-menu-button layout-topbar-button"
+      (click)="layoutService.showProfileSidebar()">
+      <i class="pi pi-ellipsis-v"></i>
+    </button>
 
-  <div #topbarmenu class="layout-topbar-menu" [ngClass]="{
+    <div #topbarmenu class="layout-topbar-menu" [ngClass]="{
       'layout-topbar-menu-mobile-active':
         layoutService.state.profileSidebarVisible
     }">
-    <span class="mr-4 p-link text-800"><i class="pi pi-search" style="font-size: 17px; padding-top: 4px;"></i></span>
-    <span (click)="op.toggle($event)" class="mr-4 p-link text-800"><i class="pi pi-bell" style="font-size: 17px; padding-top: 4px;"></i></span>
-    <!-- <p-avatar icon="pi pi-search" severity="success" styleClass="mr-2 p-link p-3"
-      [style]="{ 'background-color': '#ffffff', color: '#4A5468' }"></p-avatar> -->
-    <!-- <p-avatar (click)="op.toggle($event)" icon="pi pi-bell" severity="success" styleClass="mr-2 p-link p-3"
-      [style]="{ 'background-color': '#ffffff', color: '#4A5468' }"></p-avatar> -->
-    <p-overlayPanel #op [showCloseIcon]="false" [style]="{ width: '450px' }" styleClass="shadow-5 mt-5">
-      <ng-template pTemplate>
-        <p-table [value]="notificationItems" selectionMode="single" [(selection)]="selectedNotification"
-          (onNotificationSelect)="onNotificationSelect($event)" [rows]="10" responsiveLayout="scroll">
-          <ng-template pTemplate="header">
-            <tr>
-              <th><strong>NOTIFICATIONS</strong></th>
-            </tr>
-          </ng-template>
-          <ng-template pTemplate="body" let-rowData let-notificationItem>
-            <tr routerLink="{{ notificationItem.routerLink }}" [pSelectableRow]="rowData">
-              <td>
-                <p class="grey-font mb-0 pb-0">
-                  <small><strong>{{ notificationItem.label }}</strong></small>
-                </p>
-                <p class="text-500 mt-0 pt-0">
-                  <small>{{ notificationItem.label }}</small>
-                </p>
-              </td>
-            </tr>
-          </ng-template>
-        </p-table>
-        <button pButton pRipple label="Clear all notifications"
-          class="w-full p-button-raised p-button-secondary"></button>
-      </ng-template>
-    </p-overlayPanel>
-    <p-menu #NotificationMenu [popup]="true" [model]="notificationItems"></p-menu>
-    <ng-container *ngIf="user | async as nUser">
-      <p-chip [label]="nUser.full_name" image="assets/images/logos/myProfilePic.png" styleClass="mr-2">
-      </p-chip>
-    </ng-container>
+      <span class="mr-4 p-link text-800"><i class="pi pi-search" style="font-size: 17px; padding-top: 4px;"></i></span>
+      <span (click)="op.toggle($event)" class="mr-4 p-link text-800"><i class="pi pi-bell"
+          style="font-size: 17px; padding-top: 4px;"></i></span>
+      <p-overlayPanel #op [showCloseIcon]="false" [style]="{ width: '450px' }" styleClass="shadow-5 mt-5">
+        <ng-template pTemplate>
+          <p-table [value]="notificationItems" selectionMode="single" [(selection)]="selectedNotification"
+            (onNotificationSelect)="onNotificationSelect($event)" [rows]="10" responsiveLayout="scroll">
+            <ng-template pTemplate="header">
+              <tr>
+                <th><strong>NOTIFICATIONS</strong></th>
+              </tr>
+            </ng-template>
+            <ng-template pTemplate="body" let-rowData let-notificationItem>
+              <tr routerLink="{{ notificationItem.routerLink }}" [pSelectableRow]="rowData">
+                <td>
+                  <p class="grey-font mb-0 pb-0">
+                    <small><strong>{{ notificationItem.label }}</strong></small>
+                  </p>
+                  <p class="text-500 mt-0 pt-0">
+                    <small>{{ notificationItem.label }}</small>
+                  </p>
+                </td>
+              </tr>
+            </ng-template>
+          </p-table>
+          <button pButton pRipple label="Clear all notifications"
+            class="w-full p-button-raised p-button-secondary"></button>
+        </ng-template>
+      </p-overlayPanel>
+      <p-menu #NotificationMenu [popup]="true" [model]="notificationItems"></p-menu>
+      <ng-container *ngIf="user | async as nUser">
+        <p-chip [label]="nUser.full_name" image="assets/images/logos/myProfilePic.png" styleClass="mr-2">
+        </p-chip>
+      </ng-container>
 
-    <button class="p-link" (click)="menu.toggle($event)">
-      <i class="pi pi-chevron-down"></i></button><p-menu styleClass="p-2" #menu [popup]="true" [model]="items"></p-menu>
+      <button class="p-link" (click)="menu.toggle($event)">
+        <i class="pi pi-chevron-down"></i></button><p-menu styleClass="p-2" #menu [popup]="true"
+        [model]="items"></p-menu>
+    </div>
   </div>
-</div>
 </div>
