--- a/apps/client-portal/src/app/main/auth/pages/forgot-password-page/forgot-password-page.component.html
+++ b/apps/client-portal/src/app/main/auth/pages/forgot-password-page/forgot-password-page.component.html
@@ -1,11 +1,11 @@
-<div style="margin-bottom: -158px;" class="white-bg justify-content-center overflow-hidden min-w-screen">
+<!-- <div style="margin-bottom: -158px;" class="white-bg justify-content-center overflow-hidden min-w-screen">
     <div class="pt-4 pb-2 px-8 flex align-items-center justify-content-between relative lg:static white-bg">
         <a class="align-items-center" href="#">
             <span class="block text-4xl font-bold mb-1 grey-font">
                 <img src="assets/images/logos//monita-black-logo.png" alt="logo" height="120" class="img-fluid p-5" /></span>
         </a>
         <a pRipple class="cursor-pointer block lg:hidden text-700" pStyleClass="@next" enterClass="hidden"
-            leaveToClass="hidden" [hideOnOutsideClick]="true">
+            leaveToClass="hidden" hideOnOutsideClick="true">
             <i class="pi pi-bars text-4xl"></i>
         </a>
         <div class="align-items-center flex-grow-1 justify-content-between hidden lg:flex absolute lg:static w-full left-0 px-6 lg:px-0 z-2"
@@ -14,12 +14,11 @@
             </ul>
         </div>
     </div>
-</div>
-
+</div> -->
 <div
     class="surface-card flex align-items-center justify-content-center min-h-screen min-w-screen overflow-hidden roboto-font">
     <div class="grid justify-content-center p-2 lg:p-0" style="min-width: 60%">
-        <div class="surface-card w-full lg:w-5 pt-8" *ngIf="!sent">
+        <div class="surface-card w-full lg:w-5 pt-8" >
             <div class="text-left mb-5">
                 <div class="text-900 text-4xl font-medium">
                     <span class="black-font"><strong>Forgot Password?</strong></span>
@@ -29,7 +28,7 @@
             </div>
             <!-- forgot password -->
             <div class="mb-5">
-                <form class="" [formGroup]="resetForm">
+                <form class="" >
                     <div>
                         <label for="username" class="block text-900 font-medium mb-2">Email</label>
                         <input id="login_username" formControlName="username" placeholder="Login Username" type="text"
