--- a/apps/client-portal/src/app/app.component.html
+++ b/apps/client-portal/src/app/app.component.html
@@ -1,3 +1,3 @@
 <!-- <store-platform-nx-welcome></store-platform-nx-welcome>-->
 <router-outlet></router-outlet>
-<!-- Alhamdulillah<p-button label="Submit"></p-button>-<p-button label="Submit" [link]="true"></p-button> -->
+<!-- <p-button label="Submit"></p-button>-<p-button label="Submit" [link]="true"></p-button> -->
