--- a/apps/client-portal/src/app/main/layout/components/app.topbar.component.html
+++ b/apps/client-portal/src/app/main/layout/components/app.topbar.component.html
@@ -1,13 +1,52 @@
-<p-toast></p-toast>
-<div>
-  <div class="layout-topbar px-2 md:px-4 lg:px-6">
-    <div class="px-2 md:px-4 lg:px-6">
-      <a class="layout-topbar-logo" routerLink=""> </a>
-    </div>
-    <button *ngIf="layoutService.state.staticMenuDesktopInactive == true" #menubutton
-      class="p-link layout-menu-button layout-topbar-button" (click)="layoutService.onMenuToggle()">
-      <i class="pi pi-bars"></i>
+<!-- <div class="layout-topbar">
+    <a class="layout-topbar-logo" routerLink="">
+        <img src="assets/layout/images/{{layoutService.config().colorScheme === 'light' ? 'logo-dark' : 'logo-white'}}.svg"
+            alt="logo">
+        <span>SAKAI</span>
+    </a>
+
+    <button #menubutton class="p-link layout-menu-button layout-topbar-button" (click)="layoutService.onMenuToggle()">
+        <i class="pi pi-bars"></i>
     </button>
+
+    <button #topbarmenubutton class="p-link layout-topbar-menu-button layout-topbar-button"
+        (click)="layoutService.showProfileSidebar()">
+        <i class="pi pi-ellipsis-v"></i>
+    </button>
+
+    <div #topbarmenu class="layout-topbar-menu"
+        [ngClass]="{'layout-topbar-menu-mobile-active': layoutService.state.profileSidebarVisible}">
+        <button class="p-link layout-topbar-button">
+            <i class="pi pi-calendar"></i>
+            <span>Calendar</span>
+        </button>
+        <button class="p-link layout-topbar-button">
+            <i class="pi pi-user"></i>
+            <span>Profile</span>
+        </button>
+        <button class="p-link layout-topbar-button" [routerLink]="'/documentation'">
+            <i class="pi pi-cog"></i>
+            <span>Settings</span>
+        </button>
+    </div>
+</div> -->
+
+
+
+
+
+<div>
+  <div class="layout-topbar px-2 md:px-4 lg:px-6" style="background-color: #dcebdf;">
+    <div class="px-2 md:px-4 lg:px-6">
+      <!-- <a class="layout-topbar-logo" routerLink=""></a> -->
+      <button #menubutton class="p-link layout-menu-button layout-topbar-button" (click)="layoutService.onMenuToggle()">
+        <i class="pi pi-bars"></i>
+      </button>
+    </div>
+    <!-- <button #menubutton class="p-link layout-menu-button layout-topbar-button"
+            (click)="layoutService.onMenuToggle()">
+            <i class="pi pi-bars"></i>
+        </button> -->
 
     <button #topbarmenubutton class="p-link layout-topbar-menu-button layout-topbar-button"
       (click)="layoutService.showProfileSidebar()">
@@ -48,8 +87,8 @@
         </ng-template>
       </p-overlayPanel>
       <p-menu #NotificationMenu [popup]="true" [model]="notificationItems"></p-menu>
-      <ng-container *ngIf="user | async as nUser">
-        <p-chip [label]="nUser.full_name" image="assets/images/logos/myProfilePic.png" styleClass="mr-2">
+      <ng-container>
+        <p-chip [label]="'Narumah'" image="../../../assets/demo/images/avatar/xuxuefeng.png" styleClass="mr-2">
         </p-chip>
       </ng-container>
 
