--- a/apps/client-portal/src/assets/layout/styles/layout/_menu.scss
+++ b/apps/client-portal/src/assets/layout/styles/layout/_menu.scss
@@ -1,16 +1,14 @@
 .layout-sidebar {
   position: fixed;
-  width: 260px;
-  height: 100%;
+  width: 300px;
+  height: 100vh;
   z-index: 999;
   overflow-y: auto;
   user-select: none;
-  font-size: 14px;
-  // font-family: 'SF Pro Display', sans-serif;
-  // top: 7rem;
+  top: 4.9rem;
   // left: 2rem;
   transition: transform $transitionDuration, left $transitionDuration;
-  background-color: #F0F3F9;
+  background-color: #2D3E40;
   // border-radius: $borderRadius;
   padding: 0.5rem 1.5rem;
   box-shadow: 0px 3px 5px rgba(0, 0, 0, .02), 0px 0px 2px rgba(0, 0, 0, .05), 0px 1px 4px rgba(0, 0, 0, .08);
@@ -26,7 +24,7 @@
       font-size: .857rem;
       text-transform: uppercase;
       font-weight: 700;
-      color: var(--surface-a);
+      color: var(--surface-900);
       margin: .75rem 0;
     }
 
@@ -63,13 +61,9 @@
       align-items: center;
       position: relative;
       outline: 0 none;
-      color: #000000;
+      color: var(--text-color);
       cursor: pointer;
-      font-weight: 700;
-      font-size: 14px;
-      padding: 1.25rem 0 1.25rem 1rem;
-      word-wrap: break-word;
-      margin: 0 0 5px 0;
+      padding: .75rem 1rem;
       border-radius: $borderRadius;
       transition: background-color $transitionDuration, box-shadow $transitionDuration;
 
@@ -83,23 +77,13 @@
         transition: transform $transitionDuration;
       }
 
-      &.rotated-icon {
-        .layout-menuitem-icon {
-          transform: rotate(90deg);
-        }
-      }
-
       &.active-route {
         font-weight: 700;
-        // color: var(--surface-g);
-        color: #E36C3E;
+        color: var(--primary-color);
       }
 
       &:hover {
-        // background-color: #E36C3E;
-        // background-color: var(--surface-hover);
-        // color: #4A5468;
-        color: #E36C3E;
+        background-color: var(--surface-hover);
       }
 
       &:focus {
