--- a/apps/client-portal/src/assets/layout/styles/theme/bootstrap4-light-blue/theme.css
+++ b/apps/client-portal/src/assets/layout/styles/theme/bootstrap4-light-blue/theme.css
@@ -1,14 +1,4 @@
 :root {
-  /* --surface-a:#ffffff;
-  --surface-b:#f8f9fa;
-  --surface-c:#e9ecef;
-  --surface-d:#dee2e6;
-  --surface-e:#ffffff;
-  --surface-f:#ffffff;
-  --text-color:#495057;
-  --text-color-secondary:#6c757d;
-  --primary-color:#3B82F6;
-  --primary-color-text:#ffffff; */
   --surface-a: #c5c3c3;
   --surface-b: #efefef;
   --surface-c: #e9ecef;
@@ -19,9 +9,9 @@
   --surface-f: #fdcf6f;
   --text-color: #212529;
   --text-color-secondary: #000000;
-  --primary-color: #E36C3E;
+  --primary-color: #2D3E40;
   --primary-color-text: #ffffff;
-  --font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
+  --font-family: Comfortaa;
   --surface-0: #ffffff;
   --surface-50: #FAFAFA;
   --surface-100: #F5F5F5;
@@ -51,7 +41,7 @@
   --surface-card: #ffffff;
   --surface-overlay: #ffffff;
   --surface-border: #dfe7ef;
-  --surface-hover: #f6f9fc;
+  --surface-hover: #2D3E40;
   --focus-ring: 0 0 0 0.2rem #BFDBFE;
   --maskbg: rgba(0, 0, 0, 0.4);
   color-scheme: light;
@@ -2135,8 +2125,8 @@ p-treeselect.p-treeselect-clearable .p-treeselect-clear-icon {
 
 .p-button {
   color: #ffffff;
-  background: #E36C3E;
-  border: 1px solid #E36C3E;
+  background: #2D3E40;
+  border: 1px solid #2D3E40;
   padding: 0.75rem 1.25rem;
   font-size: 1rem;
   transition: background-color 0.2s, color 0.2s, border-color 0.2s, box-shadow 0.2s;
