--- a/apps/client-portal/src/app/main/layout/app.layout.component.html
+++ b/apps/client-portal/src/app/main/layout/app.layout.component.html
@@ -3,7 +3,7 @@
   <div class="layout-sidebar">
     <app-sidebar></app-sidebar>
   </div>
-  <div class="layout-main-container" style="background-color: #E4F2E7;">
+  <div class="layout-main-container">
     <div class="layout-main">
       <router-outlet></router-outlet>
     </div>
