--- a/apps/client-portal/src/assets/layout/styles/layout/_menu.scss
+++ b/apps/client-portal/src/assets/layout/styles/layout/_menu.scss
@@ -1,4 +1,7 @@
 .layout-sidebar {
+  display: grid;
+  align-items: start;
+  justify-content: start;
   position: fixed;
   width: 300px;
   height: 100vh;
@@ -8,7 +11,7 @@
   top: 4.9rem;
   // left: 2rem;
   transition: transform $transitionDuration, left $transitionDuration;
-  background-color: #2D3E40;
+  background-color: #dcebdf;
   // border-radius: $borderRadius;
   padding: 0.5rem 1.5rem;
   box-shadow: 0px 3px 5px rgba(0, 0, 0, .02), 0px 0px 2px rgba(0, 0, 0, .05), 0px 1px 4px rgba(0, 0, 0, .08);
@@ -21,7 +24,7 @@
 
   .layout-root-menuitem {
     >.layout-menuitem-root-text {
-      font-size: .857rem;
+      font-size: .957rem;
       text-transform: uppercase;
       font-weight: 700;
       color: var(--surface-900);
@@ -63,18 +66,12 @@
       outline: 0 none;
       color: var(--text-color);
       cursor: pointer;
-      padding: .75rem 1rem;
+      padding: .85rem .5rem;
       border-radius: $borderRadius;
       transition: background-color $transitionDuration, box-shadow $transitionDuration;
 
       .layout-menuitem-icon {
         margin-right: .5rem;
-      }
-
-      .layout-submenu-toggler {
-        font-size: 75%;
-        margin-left: auto;
-        transition: transform $transitionDuration;
       }
 
       &.active-route {
@@ -83,7 +80,7 @@
       }
 
       &:hover {
-        background-color: var(--surface-hover);
+        background-color: #b4c0cd;
       }
 
       &:focus {
