--- a/apps/client-portal/src/app/main/layout/components/app.topbar.component.html
+++ b/apps/client-portal/src/app/main/layout/components/app.topbar.component.html
@@ -1,22 +1,17 @@
 <div>
   <div class="layout-topbar px-2 md:px-4 lg:px-6" style="background-color: #dcebdf;">
     <div class="px-2 md:px-4 lg:px-6">
-      <!-- <a class="layout-topbar-logo" routerLink=""></a> -->
       <button #menubutton class="p-link layout-menu-button layout-topbar-button" (click)="layoutService.onMenuToggle()">
         <i class="pi pi-bars"></i>
       </button>
     </div>
-    <!-- <button #menubutton class="p-link layout-menu-button layout-topbar-button"
-            (click)="layoutService.onMenuToggle()">
-            <i class="pi pi-bars"></i>
-        </button> -->
 
     <button #topbarmenubutton class="p-link layout-topbar-menu-button layout-topbar-button"
       (click)="layoutService.showProfileSidebar()">
       <i class="pi pi-ellipsis-v"></i>
     </button>
 
-    <div #topbarmenu class="layout-topbar-menu" [ngClass]="{
+    <div #topbarmenu class="layout-topbar-menu flex align-items-center" [ngClass]="{
       'layout-topbar-menu-mobile-active':
         layoutService.state.profileSidebarVisible
     }">
