--- a/apps/client-portal/src/app/main/layout/components/app.topbar.component.html
+++ b/apps/client-portal/src/app/main/layout/components/app.topbar.component.html
@@ -1,5 +1,5 @@
 <div>
-  <div class="layout-topbar px-2 md:px-4 lg:px-6" style="background-color: #dcebdf;">
+  <div class="layout-topbar px-2 md:px-4 lg:px-6" style="background-color: #bedec4;">
     <div class="px-2 md:px-4 lg:px-6">
       <button #menubutton class="p-link layout-menu-button layout-topbar-button" (click)="layoutService.onMenuToggle()">
         <i class="pi pi-bars"></i>
