--- a/apps/client-portal/src/assets/layout/styles/layout/_menu.scss
+++ b/apps/client-portal/src/assets/layout/styles/layout/_menu.scss
@@ -11,7 +11,7 @@
   top: 4.9rem;
   // left: 2rem;
   transition: transform $transitionDuration, left $transitionDuration;
-  background-color: #dcebdf;
+  background-color: #bedec4;
   // border-radius: $borderRadius;
   padding: 0.5rem 1.5rem;
   box-shadow: 0px 3px 5px rgba(0, 0, 0, .02), 0px 0px 2px rgba(0, 0, 0, .05), 0px 1px 4px rgba(0, 0, 0, .08);
