--- a/apps/client-portal/src/assets/layout/styles/theme/bootstrap4-light-blue/theme.css
+++ b/apps/client-portal/src/assets/layout/styles/theme/bootstrap4-light-blue/theme.css
@@ -41,7 +41,7 @@
   --surface-card: #ffffff;
   --surface-overlay: #ffffff;
   --surface-border: #dfe7ef;
-  --surface-hover: #2D3E40;
+  --surface-hover: #d8dedf;
   --focus-ring: 0 0 0 0.2rem #BFDBFE;
   --maskbg: rgba(0, 0, 0, 0.4);
   color-scheme: light;
