--- a/apps/client-portal/src/app/main/layout/components/app-top-bar/app-top-bar.component.html
+++ b/apps/client-portal/src/app/main/layout/components/app-top-bar/app-top-bar.component.html
@@ -44,7 +44,7 @@
             </ng-template>
           </p-table>
           <button pButton pRipple label="Clear all notifications"
-            class="w-full p-button-raised p-button-secondary"></button>
+            class="w-full p-button-raised p-button-secondary mt-3"></button>
         </ng-template>
       </p-overlayPanel>
       <p-menu #NotificationMenu [popup]="true" [model]="notificationItems"></p-menu>
