--- a/apps/client-portal/src/assets/layout/styles/layout/_menu.scss
+++ b/apps/client-portal/src/assets/layout/styles/layout/_menu.scss
@@ -1,151 +1,154 @@
 .layout-sidebar {
-  position: fixed;
-  width: 260px;
-  height: 100%;
-  z-index: 999;
-  overflow-y: auto;
-  user-select: none;
-  font-size: 14px;
-  // font-family: 'SF Pro Display', sans-serif;
-  // top: 7rem;
-  // left: 2rem;
-  transition: transform $transitionDuration, left $transitionDuration;
-  background-color: #F0F3F9;
-  // border-radius: $borderRadius;
-  padding: 0.5rem 1.5rem;
-  box-shadow: 0px 3px 5px rgba(0, 0, 0, .02), 0px 0px 2px rgba(0, 0, 0, .05), 0px 1px 4px rgba(0, 0, 0, .08);
+    display: grid;
+    align-items: start;
+    justify-content: start;
+    position: fixed;
+    width: 300px;
+    height: 100vh;
+    z-index: 999;
+    overflow-y: auto;
+    user-select: none;
+    top: 4.4rem;
+    transition: transform $transitionDuration, left $transitionDuration;
+    // border-radius: $borderRadius;
+    padding: 0.5rem 1.5rem;
+    box-shadow: 0px 3px 5px rgba(0, 0, 0, .02), 0px 0px 2px rgba(0, 0, 0, .05), 0px 1px 4px rgba(0, 0, 0, .08);
 }
 
+
+
 .layout-menu {
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
-
-  .layout-root-menuitem {
-    >.layout-menuitem-root-text {
-      font-size: .857rem;
-      text-transform: uppercase;
-      font-weight: 700;
-      color: var(--surface-a);
-      margin: .75rem 0;
-    }
-
-    >a {
-      display: none;
-    }
-  }
-
-  a {
-    user-select: none;
-
-    &.active-menuitem {
-      >.layout-submenu-toggler {
-        transform: rotate(-180deg);
-      }
-    }
-  }
-
-  li.active-menuitem {
-    >a {
-      .layout-submenu-toggler {
-        transform: rotate(-180deg);
-      }
-    }
-  }
-
-  ul {
     margin: 0;
     padding: 0;
     list-style-type: none;
 
-    a {
-      display: flex;
-      align-items: center;
-      position: relative;
-      outline: 0 none;
-      color: #000000;
-      cursor: pointer;
-      font-weight: 700;
-      font-size: 14px;
-      padding: 1.25rem 0 1.25rem 1rem;
-      word-wrap: break-word;
-      margin: 0 0 5px 0;
-      border-radius: $borderRadius;
-      transition: background-color $transitionDuration, box-shadow $transitionDuration;
-
-      .layout-menuitem-icon {
-        margin-right: .5rem;
-      }
-
-      .layout-submenu-toggler {
-        font-size: 75%;
-        margin-left: auto;
-        transition: transform $transitionDuration;
-      }
-
-      &.rotated-icon {
-        .layout-menuitem-icon {
-          transform: rotate(90deg);
+    .layout-root-menuitem {
+        >.layout-menuitem-root-text {
+            font-size: .957rem;
+            text-transform: uppercase;
+            font-weight: 700;
+            color: var(--surface-900);
+            margin: .75rem 0;
         }
-      }
 
-      &.active-route {
-        font-weight: 700;
-        // color: var(--surface-g);
-        color: #E36C3E;
-      }
+        >a {
+            display: none;
+        }
+    }
 
-      &:hover {
-        // background-color: #E36C3E;
-        // background-color: var(--surface-hover);
-        // color: #4A5468;
-        color: #E36C3E;
-      }
+    a {
+        user-select: none;
 
-      &:focus {
-        @include focused-inset();
-      }
+        &.active-menuitem {
+            >.layout-submenu-toggler {
+                transform: rotate(-180deg);
+            }
+        }
+    }
+
+    li.active-menuitem {
+        >a {
+            .layout-submenu-toggler {
+                transform: rotate(-180deg);
+            }
+        }
     }
 
     ul {
-      overflow: hidden;
-      border-radius: $borderRadius;
+        margin: 0;
+        padding: 0;
+        list-style-type: none;
 
-      li {
-        a {
-          margin-left: 1rem;
+        .no-background {
+            cursor: pointer;
+            padding: 20px;
+
+            &:hover {
+                background-color: rgb(240, 240, 240);
+                color: #3a6073;
+            }
         }
 
-        li {
-          a {
-            margin-left: 2rem;
-          }
+        a {
+            display: flex;
+            align-items: center;
+            position: relative;
+            outline: 0 none;
+            color: var(--text-color);
+            cursor: pointer;
+            border-radius: 7px;
+            padding: 7px;
+            margin-bottom: 4px;
+            // border-radius: $borderRadius;
+            width: 200px;
+            transition: background-color $transitionDuration, box-shadow $transitionDuration;
 
-          li {
-            a {
-              margin-left: 2.5rem;
+
+
+            .layout-menuitem-icon {
+                margin-right: .5rem;
             }
 
-            li {
-              a {
-                margin-left: 3rem;
-              }
+            &.active-route {
+                font-weight: 700;
+                background-image: linear-gradient(to bottom right, #16222e, #3a6073);
+                background-position: center;
+                box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.03), 0px 0px 2px rgba(0, 0, 0, 0.06), 0px 2px 6px rgba(0, 0, 0, 0.12);
+                color: #fff;
 
-              li {
+                // color: var(--primary-color);
+            }
+
+            &:hover {
+                background-color: #5e98b5;
+                font-weight: 700;
+                color: #fff;
+            }
+
+            &:focus {
+                @include focused-inset();
+            }
+        }
+
+        ul {
+            overflow: hidden;
+            border-radius: $borderRadius;
+
+            li {
                 a {
-                  margin-left: 3.5rem;
+                    margin-left: 1rem;
                 }
 
                 li {
-                  a {
-                    margin-left: 4rem;
-                  }
+                    a {
+                        margin-left: 2rem;
+                    }
+
+                    li {
+                        a {
+                            margin-left: 2.5rem;
+                        }
+
+                        li {
+                            a {
+                                margin-left: 3rem;
+                            }
+
+                            li {
+                                a {
+                                    margin-left: 3.5rem;
+                                }
+
+                                li {
+                                    a {
+                                        margin-left: 4rem;
+                                    }
+                                }
+                            }
+                        }
+                    }
                 }
-              }
             }
-          }
         }
-      }
     }
-  }
 }
